# 0nce

./: BENCHMARKS.md  Cargo.toml  PLAN-maturity.md  PLAN.md  README.md  REVIEW-v1.md  REVIEW-v2a.md  REVIEW.md  SPEC.md  demo.sh  rust-toolchain.toml
core/: Cargo.toml
core/src/: lib.rs  registry.rs
docs/: gpu-proving.md  kosmos-followup-t1-complete.md  kosmos-validation-brief.md  writeup-draft-merkle-accelerators.md
docs/research/dnssec-email-anchoring/: README.md  report.html
docs/research/dnssec-email-anchoring/survey/: census_worker.sh  corrected-federal-counts.txt  dnssec_survey.sh  international-domains.txt  international-survey.csv  pilot-us-eu-sample.csv  us-gov-mil-census.csv
docs/superpowers/specs/: 2026-06-13-0nce-v1-design.md  2026-06-14-0nce-v2a-registry-membership-design.md  2026-06-25-0nce-v2b-dnssec-validator-design.md
host/: Cargo.toml
host/src/: dns.rs  email.rs  main.rs  nullifier_store.rs  prove.rs  registry.rs  verify.rs
host/tests/: adversarial.rs  disclosure.rs  must_pass.rs  registry.rs
host/tests/fixtures/: gen_org.py  gen_resigned.py  org.pubkey.tag  org_malformed_from.eml  org_nonh_to.eml  real.eml  real.pubkey.tag  resigned.pubkey.tag  resigned_a.eml  resigned_b.eml
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: address.rs  body.rs  bytes_util.rs  canonical.rs  dkim.rs  main.rs  nullifier.rs  signed_set.rs  verify.rs
methods/src/: lib.rs
