[package]
name = "host"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "0nce"
path = "src/main.rs"

[features]
# Opt-in GPU proving via RISC0's CUDA backend. Build with `--features cuda`;
# needs a CUDA toolkit (nvcc) at build time and a CUDA runtime + NVIDIA driver
# at run time. CPU proving is the default and needs none of that.
cuda = ["risc0-zkvm/cuda"]

[dependencies]
risc0-zkvm = { version = "3" }
methods = { path = "../methods" }
nce-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
bincode = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# DNS lookup is delegated to `dig` via std::process::Command. Pure-Rust
# DNS clients (hickory, etc.) pull tokio; for a single TXT lookup the
# subprocess is far simpler and per SPEC.md §6 step 2 the pubkey is
# already out of the trust boundary.

[dev-dependencies]
tempfile = "3"
