[package]
name = "guest"
version = "0.0.0"
edition = "2021"

# Declared as its own workspace root so cargo doesn't try to fold the guest
# into the parent workspace at ../../Cargo.toml. The guest is compiled
# separately by risc0-build with the RISC0 RISC-V toolchain.
[workspace]

[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1", default-features = false, features = ["std"] }
nce-core = { path = "../../core" }
base64 = "0.22"
# Per SPEC.md guardrails: dependencies are added when their corresponding §4
# step is implemented, not pre-emptively. Already added:
#   §4.1/§4.2 (header parse) — base64 for b/bh decoding, nce-core for types
#   §4.3 (canonicalization)  — pure stdlib, no dep
# Expected:
#   §4.4 (SHA-256 of body)   — risc0 sha2 accelerator or sha2 crate
#   §4.6 (RSA verify)        — rsa crate (verify only) + bigint syscalls
#   §4.7 (Poseidon nullifier) — light-poseidon (BN254, Circom/Iden3 params)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
