[package]
name = "guest"
version = "0.0.0"
edition = "2021"

# Declared as its own workspace root so cargo doesn't try to fold the guest
# into the parent workspace at ../../Cargo.toml. The guest is compiled
# separately by risc0-build with the RISC0 RISC-V toolchain.
[workspace]

[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1", default-features = false, features = ["std"] }
nce-core = { path = "../../core" }
base64 = "0.22"
sha2 = "0.10"
# Dependencies added per SPEC.md §4 step that needs them. Already added:
#   §4.1/§4.2 (header parse): base64 for b/bh decoding, nce-core for types
#   §4.3 (canonicalization):  pure stdlib, no dep
#   §4.4 (SHA-256 of body):   sha2 crate (RISC0 accelerator patch is a v1
#                             prove-time optimization; v0 uses unpatched sha2)
# Expected:
#   §4.6 (RSA verify):        rsa crate (verify only) + bigint syscalls
#   §4.7 (Poseidon nullifier): light-poseidon (BN254, Circom/Iden3 params)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
