[package]
name = "guest"
version = "0.0.0"
edition = "2021"

# Declared as its own workspace root so cargo doesn't try to fold the guest
# into the parent workspace at ../../Cargo.toml. The guest is compiled
# separately by risc0-build with the RISC0 RISC-V toolchain.
[workspace]

[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3", default-features = false, features = ["std"] }
nce-core = { path = "../../core" }
base64 = "0.22"
# Pinned to the versions the RISC0 accelerator forks tag (see [patch.crates-io]
# below). sha2 0.10.9 has a risczero tag; rsa's latest fork tag is 0.9.9 (no
# 0.9.10 yet) — RSA-PKCS1v1.5 verify is unchanged across 0.9.9↔0.9.10.
sha2 = { version = "=0.10.9", features = ["oid"] }
rsa = "=0.9.9"
light-poseidon = "0.3"
ark-bn254 = "0.5"
ark-ff = "0.5"
# Dependencies added per SPEC.md §4 step that needs them. Already added:
#   §4.1/§4.2 (header parse): base64 for b/bh decoding, nce-core for types
#   §4.3 (canonicalization):  pure stdlib, no dep
#   §4.4 (SHA-256 of body):   sha2 crate (oid feature for use with rsa)
#   §4.6 (RSA verify):        rsa crate (verify only). RISC0 bigint accelerator
#                             routes via num-bigint internally; the patch is a v1
#                             prove-time optimization, not adopted in v0.
#   §4.7 (Poseidon nullifier): light-poseidon (BN254, Circom/Iden3 params),
#                             ark-bn254 / ark-ff for the field type.

# RISC0 cryptography accelerator patches (0PO-388). Guest-only — this manifest
# is its own workspace root, so the patch affects only the guest build graph
# (including the path-dep core's sha2). Both are STABLE precompiles; neither
# needs the risc0-zkvm "unstable" feature (per RISC0 precompiles doc, only
# tiny-keccak does). sha2 accelerates the body hash + the 20 SHA Merkle nodes;
# rsa accelerates the RSA-2048 verify (the dominant cost) via RISC0 bigint.
# Tags are version-pinned to the resolved crate versions — do not bump blindly.
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.9-risczero.0" }

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
